# sublime-patcher

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
src/: main.cpp
src/app/: SublimeApp.cpp  SublimeApp.hpp
src/core/: AppInfo.hpp  AppType.hpp  Architecture.hpp  Platform.hpp
src/patch/: Patch.hpp  PatchManager.cpp  PatchManager.hpp
